examples-demos-complete-update

--- a/excercises/simple-site/calculator.html
+++ b/excercises/simple-site/calculator.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.min.css" />
   </head>
   <body>
+    <h3>Calculator</h3>
     <main>
       <label for="number1Input">Number 1</label>
       <input id="number1Input" type="number" />
