--- a/excercises/simple-site/calculator.html
+++ b/excercises/simple-site/calculator.html
@@ -7,20 +7,25 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.min.css" />
   </head>
   <body>
-    <h3>Calculator</h3>
     <main>
-      <label for="number1Input">Number 1</label>
-      <input id="number1Input" type="number" />
-      <label for="number2Input">Number 2</label>
-      <input id="number2Input" type="number" />
-      <button onclick="add()">Add</button>
-      <button onclick="subtract()">Subtract</button>
-      <button onclick="multiply()">Multiply</button>
-      <button onclick="divide()">Divide</button>
-      <label for="answerInput">Answer</label>
-      <input readonly id="answerInput" type="text" />
+      <article>
+        <h3 style="color: aqua">Calculator</h3>
+        <!-- <form> -->
+          <label for="number1Input">Number 1</label>
+          <input id="number1Input" type="number" />
+          <label for="number2Input">Number 2</label>
+          <input id="number2Input" type="number" />
+          <button onclick="add()">Add</button>
+          <button onclick="subtract()">Subtract</button>
+          <button onclick="multiply()">Multiply</button>
+          <button onclick="divide()">Divide</button>
+          <label for="answerInput">Answer</label>
+          <input readonly id="answerInput" type="text" />
+        <!-- </form> -->
+      </article>
     </main>
     <script>
+      "use script"
       let number1Input = document.getElementById("number1Input");
       let number2Input = document.getElementById("number2Input");
       let answerInput = document.getElementById("answerInput");
